@@ -41,8 +41,9 @@ Enhancements
   * Added AnalysisFromFunction & analysis_class, see (Issue #946 and PR #950)
   * Established the MDAnalysis.analysis.legacy module for unmaintained
     analysis code (Issue #743)
-        
+
 Fixes
+  * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
   * MDAnalysis.analysis.distances.between() is no longer broken
   * GROWriter resids now truncated properly (Issue #886)
   * reading/writing lambda value in trr files (Issue #859)
@@ -82,7 +83,7 @@ Changes
 Deprecations (Issue #599)
   * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
   * Moved analysis.x3dna to the analysis.legacy module (Issue #906)
-        
+
 05/15/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jbarnoud,
          dotsdl, richardjgowers, BartBruininks, jdetle
 
